--- a/.env.example
+++ b/.env.example
@@ -19,11 +19,11 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-DB_HOST=postgres
-DB_PORT=5432
-DB_DATABASE=app
-DB_USERNAME=laravel
+DB_CONNECTION=mysql
+DB_HOST=mysql
+DB_PORT=3306
+DB_DATABASE=vv2
+DB_USERNAME=vendorview
 DB_PASSWORD=secret
 
 SESSION_DRIVER=database
