--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -44,34 +44,39 @@ services:
       timeout: 5s
       retries: 3
     # The 'depends_on' attribute with 'condition: service_healthy' ensures that
-    # this service will not start until the 'postgres' service passes its health check.
+    # this service will not start until the 'mysql' service passes its health check.
     # This prevents the application from trying to connect to the database before it's ready.
     depends_on:
-      postgres:
+      mysql:
         condition: service_healthy
 
-  postgres:
-    image: postgres:16
+  mysql:
+    image: mysql:8.0
     restart: unless-stopped
-    user: postgres
     ports:
-      - "${POSTGRES_PORT:-5432}:5432"
+      # Map port 3306 inside the container to the port specified by 'MYSQL_PORT' on the host machine.
+      # -----------------------------------------------------------
+      # This allows external access to the MySQL server from your host.
+      # Be cautious when exposing database ports in production environments.
+      # -----------------------------------------------------------
+      - "${MYSQL_PORT:-3306}:3306"
     environment:
-      - POSTGRES_DB=${POSTGRES_DATABASE:-app}
-      - POSTGRES_USER=${POSTGRES_USERNAME:-laravel}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-secret}
+      # Define the default database credentials and settings for MySQL
+      - MYSQL_DATABASE=${MYSQL_DATABASE:-app}
+      - MYSQL_USER=${MYSQL_USERNAME:-laravel}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD:-secret}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-rootsecret}
     volumes:
-      - postgres-data-production:/var/lib/postgresql/data
+      - mysql-data-production:/var/lib/mysql
     networks:
       - laravel-production
-    # Health check for PostgreSQL
+    # Health check for MySQL
     # -----------------------------------------------------------
-    # Health checks allow Docker to determine if a service is operational.
-    # The 'pg_isready' command checks if PostgreSQL is ready to accept connections.
-    # This prevents dependent services from starting before the database is ready.
+    # This checks if the MySQL server is ready to accept connections by pinging it.
+    # Ensures that dependent services like php-fpm wait until MySQL is operational.
     # -----------------------------------------------------------
     healthcheck:
-      test: [ "CMD", "pg_isready" ]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -96,10 +101,10 @@ networks:
   # Attach the service to the 'laravel' network.
   # -----------------------------------------------------------
   # This custom network allows all services within it to communicate using their service names as hostnames.
-  # For example, 'php-fpm' can connect to 'postgres' by using 'postgres' as the hostname.
+  # For example, 'php-fpm' can connect to 'mysql' by using 'mysql' as the hostname.
   # -----------------------------------------------------------
   laravel-production:
 
 volumes:
-  postgres-data-production:
-  laravel-storage-production:
+  mysql-data-production:  # Stores persistent data for MySQL
+  laravel-storage-production:  # Stores persistent data for Laravel storage
