--- a/docker/development/workspace/Dockerfile
+++ b/docker/development/workspace/Dockerfile
@@ -11,6 +11,7 @@ ARG NODE_VERSION=22.0.0
 RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
     unzip \
+    iputils-ping \
     libpq-dev \
     libonig-dev \
     libssl-dev \
@@ -28,7 +29,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     bcmath \
     soap \
     && pecl install redis xdebug \
-    && docker-php-ext-enable redis xdebug\
+    && docker-php-ext-enable redis xdebug \
     && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
     && apt-get autoremove -y && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
